Update Moossy email preview URL

--- a/public/email-previews/email-preview-moossy.html
+++ b/public/email-previews/email-preview-moossy.html
@@ -25,7 +25,7 @@
     </div>
     
     <p style="text-align: center; margin: 32px 0;">
-      <a href="https://ryancwynar.github.io/mockup-moossy-dental/" style="display: inline-block; background: linear-gradient(135deg, #2563eb 0%, #7c3aed 100%); color: white; padding: 16px 32px; text-decoration: none; border-radius: 8px; font-weight: 600; font-size: 16px;">See It Live →</a>
+      <a href="https://ryancwynar.github.io/moossy-dental/" style="display: inline-block; background: linear-gradient(135deg, #2563eb 0%, #7c3aed 100%); color: white; padding: 16px 32px; text-decoration: none; border-radius: 8px; font-weight: 600; font-size: 16px;">See It Live →</a>
     </p>
     
     <p style="font-size: 16px; line-height: 1.6;">It's already live and working — that link above is your actual new website with your real content. Just point your domain and you're done.</p>
